<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="crowley.sean.GVapp.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 600x730 -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/background_campus"
            android:scaleType = "centerCrop"
            android:layout_gravity="center"/>

    </FrameLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="left|top"
        android:paddingTop="140dp"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="30dp"
        android:scrollbars="none">

        <GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentBottom="false"
            android:layout_alignParentRight="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal"
                android:layout_row="4"
                android:layout_column="0"
                android:paddingTop="20dp">
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <Button
                    android:background="@drawable/main_button"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="@string/main_button1"
                    android:textColor="#09669e"
                    android:textStyle="bold"
                    android:onClick="openGVSU"
                    android:textSize="13sp"
                    android:alpha="0.95"
                    android:id="@+id/butt1" />
                <Space
                    android:layout_width="25dp"
                    android:layout_height="match_parent" />
                <Button
                    android:background="@drawable/main_button"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:layout_gravity="start"
                    android:text="@string/main_button2"
                    android:height="140dp"
                    android:width="140dp"
                    android:textColor="#09669e"
                    android:textStyle="bold"
                    android:onClick="openRapidConnect"
                    android:textSize="13sp"
                    android:alpha="0.95" />
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_row="5"
                android:layout_column="0"
                android:paddingTop="25dp">
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <Button
                    android:background="@drawable/main_button"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="@string/main_button3"
                    android:height="140dp"
                    android:width="140dp"
                    android:textStyle="bold"
                    android:textColor="#09669e"
                    android:onClick="openMyBanner"
                    android:textSize="13sp"
                    android:alpha="0.95" />
                <Space
                    android:layout_width="25dp"
                    android:layout_height="match_parent" />
                <Button
                    android:background="@drawable/main_button"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:layout_gravity="start"
                    android:text="@string/main_button4"
                    android:height="140dp"
                    android:width="140dp"
                    android:textColor="#09669e"
                    android:textStyle="bold"
                    android:onClick="openBlackBoard"
                    android:textSize="13sp"
                    android:alpha="0.95" />
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_row="6"
                android:layout_column="0"
                android:paddingTop="25dp">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:background="@drawable/main_button"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="@string/main_button7"
                    android:height="140dp"
                    android:width="140dp"
                    android:textStyle="bold"
                    android:textColor="#09669e"
                    android:onClick="openLibrary"
                    android:textSize="13sp"
                    android:alpha="0.95" />

                <Space
                    android:layout_width="25dp"
                    android:layout_height="match_parent" />

                <Button
                    android:background="@drawable/main_button"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:layout_gravity="start"
                    android:text="@string/main_button8"
                    android:height="140dp"
                    android:width="140dp"
                    android:textColor="#09669e"
                    android:textStyle="bold"
                    android:onClick="openPeopleFinder"
                    android:textSize="13sp"
                    android:alpha="0.95" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_row="7"
                android:layout_column="0"
                android:paddingTop="25dp"
                android:paddingBottom="20dp">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:background="@drawable/main_button"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="@string/main_button5"
                    android:height="140dp"
                    android:width="140dp"
                    android:textStyle="bold"
                    android:textColor="#09669e"
                    android:onClick="openMail"
                    android:textSize="13sp"
                    android:alpha="0.95" />

                <Space
                    android:layout_width="25dp"
                    android:layout_height="match_parent" />

                <Button
                    android:background="@drawable/main_button"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:layout_gravity="start"
                    android:text="@string/main_button6"
                    android:height="140dp"
                    android:width="140dp"
                    android:textColor="#09669e"
                    android:textStyle="bold"
                    android:onClick="openSettings"
                    android:textSize="13sp"
                    android:alpha="0.95" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>
        </GridLayout>
    </ScrollView>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="170dp"
        android:id="@+id/imageView"
        android:layout_row="1"
        android:layout_column="0"
        android:src="@drawable/gv_logo"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="30dp"
        android:paddingTop="40dp" />

</RelativeLayout>
